grammar.js
    cds: $ => repeat(
      choice(
        $.using,
        $.namespace,
        $._definition,
      ),
    ),

    namespace: $ => seq(
      kw('namespace'),
      field('path', $.simple_path),
      $._required_semicolon,
    ),

    using: $ => seq(
      kw('using'),
      seq(
        optional(field('imports', choice(
          $.artifact_import,
          seq('{', list_of_trailing($.artifact_import), '}'),
        ))),
        optional(seq(kw('from'), field('file', $._string))),
      ),
      ';', // not $._required_semicolon
    ),

    artifact_import: $ => seq(
      ref_definition($),
      optional(seq(kw('as'), field('alias', $.identifier))),
    ),

    _definition: $ => seq(
      repeat($.annotation),
      choice(
        seq(
          optional_kw('define'),
          choice(
            $.context_definition,
            $.service_definition,
            $.entity_definition,
            $.event_definition,
            $.aspect_definition,
            $.type_definition,
            $.annotation_definition,
            $.view_definition,
            $._action_or_function_definition,
          ),
        ),
        seq(
          kw('extend'),
          choice(
            $.extend_context,
            $.extend_service,
            $.extend_structure,
            $.extend_projection,
            $.extend_artifact,
          ),
        ),
        $.annotate_artifact,
      ),
    ),

    service_definition: $ => seq(
      kw('service'),
      $._context_or_service_body,
    ),

    _context_or_service_body: $ => seq(
      def_path_name($),
      repeat($.annotation),
      choice(
        seq('{', repeat($._definition), '}', optional(';')),
        $._required_semicolon,
      ),
    ),

    entity_definition: $ => seq(
      optional_kw('abstract'), // note: abstract entities are deprecated and replaced by aspects
      kw('entity'),
      def_path_name($),
      repeat($.annotation),
      optional($.parameter_list),
      choice(
        seq(
          optional(seq(':', optional($.include_list))),
          $.element_definitions,
          optional($.bound_actions),
          optional(';'),
        ),
        seq(
          kw('as'),
          $.query_expression,
          choice(
            seq($.bound_actions, optional(';')),
            $._required_semicolon,
          ),
        ),
        seq(
          kw('as'),
          $.projection_clause,
          seq(
            optional($.where_clause),
            optional($.group_by_clause),
            optional($.having_clause),
            optional($.order_by_clause),
            optional($.limit_clause),
          ),
          optional($.bound_actions),
          optional(';'),
        ),
      ),
    ),

    event_definition: $ => seq(
      kw('event'),
      def_path_name($),
      repeat($.annotation),
      choice(
        seq($.element_definitions, optional(';')),
        seq(':',
          choice(
            seq($.element_definitions, optional(';')),
            seq($.projection_clause, $._required_semicolon),
            seq($.include_list, $.element_definitions, optional(';')),
          ),
        ),
      ),
    ),

    projection_clause: $ => seq(
      kw('projection'), kw('on'),
      $.from_path,
      optional(seq(kw('as'), field('alias', $.identifier))),
      optional($.select_item_list),
      optional($.excluding_clause),
    ),

    select_item_list: $ => seq(
      '{', optional_list_of_trailing($.select_item), '}',
    ),

    from_path: $ => seq(
      $._from_path_segment,
      optional(seq(':', $._from_path_segment)),
    ),
    _from_path_segment: $ => list_of(seq(
      $.identifier,
      optional(
        choice(
          seq($.from_arguments, optional($.cardinality_and_filter)),
          $.cardinality_and_filter,
        ),
      )),
      '.',
    ),

    cardinality_and_filter: $ => seq(
      '[',
      optional(seq($.number, ':')),
      choice($.where_clause, $._condition),
      ']',
    ),

    _condition: $ => choice(
      $.unary_condition,
      $.exists_condition,
      $.binary_condition,
      $._expression,
      $.predicate_condition,
      $.ternary,
    ),

    binary_condition: $ => choice(
      ...[
        [kw('and'), 'logical_and'],
        [kw('or'), 'logical_or'],
      ].map(([operator, precedence]) =>
        prec.left(precedence, seq(
          field('left', $._condition),
          field('operator', operator),
          field('right', $._condition),
        )),
      ),
      prec.left('binary_comparison', seq(
        field('left', $._condition),
        field('operator', choice('=', '<>', '>' , '>=', '<', '<=', '!=', '==')),
        optional(field('count', choice(kw('any'), kw('some'), kw('all')))),
        field('right', $._condition),
      )),
      prec.left('binary_comparison', seq(
        field('left', $._condition),
        field('operator', kw('is')),
        field('right', $.nullability),
      )),
    ),

    _expression: $ => choice(
      $._literal,
      $.value_path,
      $._special_function,
      $.binary_expression,
      $.unary_expression,
      $.new_expression,
      $.over_expression,
      $.case_expression,
      $.parenthesized_expression,
      $.parameter_ref,
    ),

    value_path: $ => list_of(
      seq(
        $.identifier,
        optional($.path_arguments),
        optional($.cardinality_and_filter),
      ),
      '.',
    ),

    element_definitions: $ => seq(
      '{',
      repeat(seq(
        repeat($.annotation),
        $.element_definition,
      )),
      '}',
    ),

    type_argument: $ => seq(
      optional(field('type_param', seq($.identifier, ':'))),
      field('value', choice(
        $.number,
        kw('variable'), // for cds.Decimal
        kw('floating'), // for cds.Decimal
      )),
    ),

    element_definition: $ => seq(
      optional_kw('virtual'),
      optional_kw('key'),
      optional_kw('masked'),
      optional_kw('element'),
      field('name', alias($.identifier, $.name)),
      repeat($.annotation),
      choice(
        $._type_definition_body,
        $._required_semicolon,
      ),
    ),

    type_definition: $ => seq(kw('type'), $._type_like_definition),
    _type_like_definition: $ => seq(
      def_path_name($),
      repeat($.annotation),
      choice(
        $._type_definition_body,
        seq(':', $.projection_clause, $._required_semicolon ),
        $._required_semicolon,
      ),
    ),

    composition_of: $ => seq(
      kw('composition'),
      optional($.cardinality),
      kw('of'),
      choice(
        // anonymous composition of aspect
        seq($.element_definitions, optional(';')),
        seq(
          optional(choice(kw('one'), kw('many'))),
          choice(
            // anonymous composition of aspect
            seq($.element_definitions, optional(';')),
            // named composition of aspect or entity
            seq(
              $.simple_path,
              optional($._association_to_end),
              repeat($.annotation),
              $._required_semicolon,
            ),
          ),
        ),
      ),
    ),

    // does not include semicolon
    _element_association_to: $ => seq(
      $.association_to,
      repeat($.annotation),
      $._required_semicolon,
    ),

    association_to: $ => seq(
      kw('association'),
      optional($.cardinality),
      kw('to'),
      optional(choice(kw('one'), kw('many'))),
      $.simple_path,
      optional($._association_to_end),
    ),

    _association_to_end: $ => choice(
      seq('{', optional_list_of_trailing($.foreign_key), '}', optional($.default_and_nullability)),
      seq(kw('on'), $._condition),
      $.default_and_nullability,
    ),

    _type_definition_body: $ => choice(
      seq(
        $.element_definitions,
        choice(
          seq($.nullability, $._required_semicolon),
          optional(';'),
        ),
      ),
      seq(
        ':',
        choice(
          seq(
            $.element_definitions,
            choice(
              seq($.nullability, $._required_semicolon),
              optional(';'),
            ),
          ),
          $.composition_of,
          $._element_association_to,
          seq(
            $.many,
            choice(
              seq($.element_definitions, optional($.nullability), optional(';')),
              seq(
                choice($.type_type_of, $.type_reference),
                optional($.nullability),
                repeat($.annotation),
                choice(
                  seq(
                    seq($.element_enum_definition, choice(optional(';'), seq($._element_properties, $._required_semicolon))),
                    seq(optional($._element_properties), $._required_semicolon),
                  ),
                  $._required_semicolon,
                ),
              ),
            ),
          ),
          seq(
            $.type_type_of,
            // optional($.nullability),
            repeat($.annotation),
            choice(
              seq($.element_enum_definition, choice(optional(';'), seq($._element_properties, $._required_semicolon))),
              seq(optional($._element_properties), $._required_semicolon),
              $._required_semicolon,
            ),
          ),
          seq(
            kw('localized'),
            $.type_reference,
            optional($._element_properties),
            repeat($.annotation),
            $._required_semicolon,
          ),
          seq(
            field('type', $.simple_path),
            choice(
              seq(
                '(', optional_list_of_trailing($.type_argument), ')',
                repeat($.annotation),
                choice(
                  seq($.element_enum_definition, choice(optional(';'), seq($._element_properties, $._required_semicolon))),
                  seq(optional($._element_properties), $._required_semicolon),
                ),
              ),
              seq(
                ':',
                $.simple_path,
                // optional($.nullability),
                repeat($.annotation),
                choice(
                  seq($.element_enum_definition, choice(optional(';'), seq($._element_properties, $._required_semicolon))),
                  seq(optional($._element_properties), $._required_semicolon),
                ),
              ),
              seq(
                repeat($.annotation),
                choice(
                  seq($.element_enum_definition, choice(optional(';'), seq($._element_properties, $._required_semicolon))),
                  seq(optional($._element_properties), $._required_semicolon),
                ),
              ),
              seq(
                repeat(seq(',', $.simple_path)),
                $.element_definitions,
                optional(';'),
              ),
            ),
          ),
        ),
      ),
      seq(
        $.calc_element_assignment,
        $._required_semicolon,
      ),
    ),

    select_item: $ => choice(
      '*',
      seq(
        repeat($.annotation),
        optional_kw('virtual'),
        optional_kw('key'),
        $._select_item_body,
      ),
    ),

    _select_item_body: $ => seq(
      choice(
        seq(
          $._expression,
          optional(seq(optional(kw('as')), field('alias', $.identifier))),
          optional(
            choice(
              seq( // expand
                $.select_item_list,
                optional($.excluding_clause),
              ),
              '.*',
              seq( // inline
                '.{',
                optional_list_of_trailing($.select_item),
                '}',
                optional($.excluding_clause),
              ),
            ),
          ),
        ),
        seq(
          $.select_item_list,
          optional($.excluding_clause),
          kw('as'),
          field('alias', $.identifier),
        ),
      ),
      repeat($.annotation),
      optional(
        seq(
          ':',
          choice(
            $.redirected_to,
            seq($.type_type_of, repeat($.annotation)),
            seq(
              optional_kw('localized'),
              $.type_reference,
              repeat($.annotation),
            ),
            choice(
              $.association_to,
              alias($.composition_of_unmanaged, $.composition_of),
            ),
          ),
        ),
      ),
    ),

    redirected_to: $ => seq(
      kw('redirected'),
      kw('to'),
      $.simple_path,
      choice(
        $._association_to_end,
        repeat($.annotation),
      ),
    ),

    where_clause: $ => seq(
      kw('where'),
      $._condition,
    ),
    query_expression: $ => seq(
      $.query_term,
      repeat(seq(
        choice(
          seq(kw('union'), optional(choice(kw('distinct'), kw('all')))),
          seq(kw('except'), optional_kw('distinct')),
          seq(kw('minus'), optional_kw('distinct')),
        ),
        $.query_term,
      )),
      optional($.order_by_clause),
      optional($.limit_clause),
    ),

    query_term: $ => seq(
      $.query_primary,
      repeat(
        seq(
          kw('intersect'),
          optional(kw('distinct')),
          $.query_primary,
        ),
      ),
    ),

    mixin_definition_list: $ => seq(
      kw('mixin'),
      '{',
      repeat($.mixin_element_definition),
      '}',
      kw('into'),
    ),

    query_primary: $ => choice(
      seq('(', $.query_expression, ')'),
      seq(
        kw('select'),
        choice(
          seq(
            kw('from'),
            $.query_source,
            optional($.mixin_definition_list),
            optional(choice(kw('all'), kw('distinct'))),
            optional($.select_item_list),
            optional($.excluding_clause),
          ),
          seq(
            optional(choice(kw('all'), kw('distinct'))),
            list_of_trailing($.select_item),
            kw('from'),
            $.query_source,
          ),
        ),
        optional($.where_clause),
        optional($.group_by_clause),
        optional($.having_clause),
      ),
    ),

    query_source: $ => list_of($.table_expression),

    table_expression: $ => seq(
      $.table_term,
      repeat(
        choice(
          seq($.join_op, $.table_expression, kw('on'), $._condition),
          seq(kw('cross'), kw('join'), $.table_term),
        ),
      ),
    ),

    join_op: $ => choice(
      kw('join'),
      seq(kw('inner'), optional($.join_cardinality), kw('join')),
      seq(kw('left'),  optional_kw('outer'), optional($.join_cardinality), kw('join')),
      seq(kw('right'), optional_kw('outer'), optional($.join_cardinality), kw('join')),
      seq(kw('full'),  optional_kw('outer'), optional($.join_cardinality), kw('join')),
    ),

    table_term: $ => choice(
      seq(
        $.from_path,
        optional(seq(optional_kw('as'), field('alias', $.identifier))),
      ),
      choice(
        seq('(', $.query_expression, ')', optional('as'), field('alias', $.identifier)),
        seq('(', $.table_expression, ')'),
      ),
    ),

    mixin_element_definition: $ => seq(
      field('name', alias($.identifier, $.name)),
      choice(
        seq(
          ':',
          choice(
            $._element_association_to,
            $.composition_of,
            seq(
              optional(seq('=', $._expression)),
              $._required_semicolon,
            ),
          ),
        ),
        seq('=', $._expression, $._required_semicolon),
      ),
    ),

    annotation: $ => seq(
      field('sign', '@'),
      choice(
        $._annotation_assignment_inner,
        $.annotation_group,
      ),
    ),

    _annotation_assignment_inner: $ => seq(
      $.annotation_path,
      optional(seq(':', $.annotation_value)),
    ),

    annotation_path: $ => seq(
      $.identifier,
      repeat(
        seq(
          '.',
          optional('@'),
          $.identifier,
        ),
      ),
      optional($.annotation_variant),
    ),
