test/corpus/service.txt
================================================================================
Service: Separate lines; no content
================================================================================

service C;
service A
 .
  B
   .
    C
     .
      D {

      };

--------------------------------------------------------------------------------

(cds
  (service_definition
    (name
      (identifier)))
  (service_definition
    (name
      (identifier)
      (identifier)
      (identifier)
      (identifier))))

================================================================================
Service: With sub-service and definitions
================================================================================

@anno
service C {
  @anno
  service C {
    type T;
  };
  type T;
}

--------------------------------------------------------------------------------

(cds
  (annotation
    (annotation_path
      (identifier)))
  (service_definition
    (name
      (identifier))
    (annotation
      (annotation_path
        (identifier)))
    (service_definition
      (name
        (identifier))
      (type_definition
        (name
          (identifier))))
    (type_definition
      (name
        (identifier)))))
