test/corpus/types.txt
================================================================================
Simple Type
================================================================================

type S : String;

--------------------------------------------------------------------------------

(cds
  (type_definition
    (simple_path
      (identifier))
    (simple_path
      (identifier))))

================================================================================
Simple Type with Type Args
================================================================================

type T : String(length: 10);

--------------------------------------------------------------------------------

(cds
  (type_definition
    (simple_path
      (identifier))
    (simple_path
      (identifier))
    (type_argument
      (identifier)
      (number))))

================================================================================
Type with empty elements
================================================================================

type S : {};
type T {};

--------------------------------------------------------------------------------

(cds
  (type_definition
    (simple_path
      (identifier))
    (element_definitions))
  (type_definition
    (simple_path
      (identifier))
    (element_definitions)))

================================================================================
Type with elements
================================================================================

type S : { e : String; };
type T { e : String; };

--------------------------------------------------------------------------------

(cds
  (type_definition
    (simple_path
      (identifier))
    (element_definitions
      (element_definition
        (identifier)
        (simple_path
          (identifier)))))
  (type_definition
    (simple_path
      (identifier))
    (element_definitions
      (element_definition
        (identifier)
        (simple_path
          (identifier))))))
