test/corpus/using.txt
================================================================================
Using - Simple Identifier
================================================================================

USING str;
using str;
uSIng str;

--------------------------------------------------------------------------------

(cds
  (using
    (artifact_import
      (definition_reference
        (identifier))))
  (using
    (artifact_import
      (definition_reference
        (identifier))))
  (using
    (artifact_import
      (definition_reference
        (identifier)))))

================================================================================
Using - Namespace
================================================================================

namespace ns;
using abc;

--------------------------------------------------------------------------------

(cds
  (namespace
    (simple_path
      (identifier)))
  (using
    (artifact_import
      (definition_reference
        (identifier)))))

================================================================================
Using - Usage
================================================================================

using { some.value as val, other.val as value } from './file.cds';

--------------------------------------------------------------------------------

(cds
  (using
    (artifact_import
      (definition_reference
        (identifier)
        (identifier))
      (identifier))
    (artifact_import
      (definition_reference
        (identifier)
        (identifier))
      (identifier))
    (single_quote_string)))
